@@ -26,6 +26,7 @@ public interface SeriesDao {
 	Integer add(AddSeriesDbDto series);
 	void markAsModified(Integer seriesId, Date updateAt, Integer updatedBy);
 	List<SitemapInfoDto> findAllForSitemap();
+	List<SeriesLinkDto> findSimilarSeries(Integer seriesId, String lang);
 	List<SeriesLinkDto> findLastAdded(int quantity, String lang);
 	SeriesFullInfoDto findByIdAsSeriesFullInfo(Integer seriesId, String lang);
 	List<SeriesInfoDto> findByIdsAsSeriesInfo(List<Integer> seriesIds, String lang);
