@@ -163,6 +163,7 @@ t_sold_to = sold to
 t_sold_for = for
 t_not_chosen_masculine = Not chosen
 t_imported_from = Imported from
+t_similar_series = Similar series
 
 # category/add.html
 
