@@ -162,6 +162,7 @@ t_sold_to = продал
 t_sold_for = за
 t_not_chosen_masculine = Не выбран
 t_imported_from = Импортировано с
+t_similar_series = Похожие серии
 
 # category/add.html
 
