@@ -51,6 +51,19 @@ series.find_all_for_sitemap = \
 SELECT s.id, s.updated_at \
   FROM series s
 
+series.find_similar_series = \
+   SELECT CASE WHEN ss.similar_series_id != :id THEN ss.similar_series_id ELSE ss.series_id END AS id \
+        , s.release_year \
+        , s.quantity \
+        , s.perforated \
+        , CASE WHEN 'ru' = :lang THEN COALESCE(count.name_ru, count.name) ELSE count.name END AS country_name \
+     FROM similar_series ss \
+     JOIN series s \
+       ON s.id = ss.series_id OR s.id = ss.similar_series_id \
+LEFT JOIN countries count \
+       ON count.id = s.country_id \
+    WHERE s.id = :id
+
 series.find_last_added = \
    SELECT s.id \
         , s.release_year \
