@@ -25,6 +25,7 @@
 - (infrastructure) use WireMock in integration tests for mocking external services
 - (functionality)  suggest a possible country on a series creation page (contributed by John Shkarin)
 - (functionality)  suggest a possible category on a series creation page
+- (functionality)  show similar series on a page with series info
 
 0.3
 - (functionality)  implemented possibility to user to add series to his collection
